# mate-session-manager

./: ChangeLog  README.md  configure.ac
data/: mate-session-properties.desktop.in.in
data/icons/: Makefile.am
data/icons/36x36/: Makefile  Makefile.am  Makefile.in
mate-session/: gsm-logout-dialog.c  gsm-logout-dialog.h  gsm-manager.c  gsm-manager.h
po/: zh_CN.po
